--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,22 +9,26 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^7.3.7",
+    "@tanstack/react-query": "^5.51.1",
+    "@types/react": "~19.0.10",
     "expo": "~53.0.0",
     "expo-file-system": "~18.1.11",
+    "expo-font": "~13.3.2",
+    "expo-router": "~5.1.5",
     "expo-secure-store": "~14.2.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
+    "expo-video": "~2.2.2",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "expo-router": "~5.1.5",
+    "react-native-pager-view": "6.7.1",
     "react-native-safe-area-context": "5.4.0",
+    "react-native-tab-view": "^4.1.3",
     "react-native-webview": "13.13.5",
-    "@tanstack/react-query": "^5.51.1",
-    "zustand": "^4.5.5",
     "typescript": "~5.8.3",
-    "@types/react": "~19.0.10",
-    "expo-video": "~2.2.2",
-    "expo-splash-screen": "~0.30.10",
-    "expo-font": "~13.3.2"
+    "zustand": "^4.5.5",
+    "@expo/vector-icons": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
