--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "expo start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@react-navigation/material-top-tabs": "^7.3.7",
@@ -28,7 +30,8 @@
     "react-native-webview": "13.13.5",
     "typescript": "~5.8.3",
     "zustand": "^4.5.5",
-    "@expo/vector-icons": "^14.1.0"
+    "@expo/vector-icons": "^14.1.0",
+    "expo-image": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
