--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,7 +31,9 @@
     "typescript": "~5.8.3",
     "zustand": "^4.5.5",
     "@expo/vector-icons": "^14.1.0",
-    "expo-image": "~2.4.0"
+    "expo-image": "~2.4.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
